[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Widgets/Main Menu/MainMenuScriptsYo.gd" type="Script" id=2]
[ext_resource path="res://Game/Widgets/Main Menu/2021 icon crop.png" type="Texture" id=3]
[ext_resource path="res://Game/Media/Soundtrack/PC/The Theme.ogg" type="AudioStream" id=4]
[ext_resource path="res://Game/Widgets/southpark.theme" type="Theme" id=5]

[sub_resource type="Environment" id=11]
background_mode = 2
dof_blur_far_distance = 280.12
dof_blur_near_amount = 1.0
adjustment_enabled = true

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 2

[node name="menu" type="Spatial"]
pause_mode = 2
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[node name="Camera" type="Camera" parent="."]

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 4 )
mix_target = 1

[node name="background" type="Sprite" parent="Control"]
material = SubResource( 1 )
position = Vector2( -12.1726, -13.7401 )
scale = Vector2( 1089.93, 624.857 )

[node name="2021 icon crop" type="Sprite" parent="Control"]
position = Vector2( 0, -225 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Menu" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -248.5
margin_right = 248.5
margin_bottom = 344.0
custom_constants/separation = 12

[node name="Button2" type="Button" parent="Control/Menu"]
margin_right = 497.0
margin_bottom = 34.0
text = "Test Level"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Control/Menu"]
margin_top = 46.0
margin_right = 497.0
margin_bottom = 80.0
disabled = true
text = "Story Mode"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Multiplayer" type="Button" parent="Control/Menu"]
margin_top = 92.0
margin_right = 497.0
margin_bottom = 126.0
disabled = true
action_mode = 0
text = "Multiplayer"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Button" parent="Control/Menu"]
margin_top = 138.0
margin_right = 497.0
margin_bottom = 172.0
disabled = true
action_mode = 0
text = "Online"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="settings" type="Button" parent="Control/Menu"]
margin_top = 184.0
margin_right = 497.0
margin_bottom = 218.0
action_mode = 0
text = "Settings"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="custom" type="Button" parent="Control/Menu"]
margin_top = 230.0
margin_right = 497.0
margin_bottom = 264.0
disabled = true
action_mode = 0
text = "Custom Content/Mods"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="Button" parent="Control/Menu"]
margin_top = 276.0
margin_right = 497.0
margin_bottom = 310.0
action_mode = 0
text = "Quit"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Story" type="VBoxContainer" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -358.48
margin_top = -63.0
margin_right = 358.48
margin_bottom = 63.0
custom_constants/separation = 12

[node name="New" type="Button" parent="Control/Story"]
margin_right = 716.0
margin_bottom = 34.0
text = "Start a New Game"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Load" type="Button" parent="Control/Story"]
margin_top = 46.0
margin_right = 716.0
margin_bottom = 80.0
disabled = true
action_mode = 0
text = "Load a Previously Saved Game"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="backtomain" type="Button" parent="Control/Story"]
margin_top = 92.0
margin_right = 716.0
margin_bottom = 126.0
action_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Settings" type="VBoxContainer" parent="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -289.0
margin_right = 289.0
margin_bottom = 368.0
custom_constants/separation = 12

[node name="game_settings" type="Button" parent="Control/Settings"]
margin_right = 578.0
margin_bottom = 34.0
disabled = true
text = "Game Settings"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="aud_settings" type="Button" parent="Control/Settings"]
margin_top = 46.0
margin_right = 578.0
margin_bottom = 80.0
disabled = true
text = "Audio Settings"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="vid_settings" type="Button" parent="Control/Settings"]
margin_top = 92.0
margin_right = 578.0
margin_bottom = 126.0
disabled = true
action_mode = 0
text = "Video Settings"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="onl_settings" type="Button" parent="Control/Settings"]
margin_top = 138.0
margin_right = 578.0
margin_bottom = 172.0
disabled = true
action_mode = 0
text = "Network/Online settings"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="save_settings" type="Button" parent="Control/Settings"]
margin_top = 184.0
margin_right = 578.0
margin_bottom = 218.0
disabled = true
action_mode = 0
text = "Save Game Settings"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="cust_settings" type="Button" parent="Control/Settings"]
margin_top = 230.0
margin_right = 578.0
margin_bottom = 264.0
disabled = true
action_mode = 0
text = "Custom Settings"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="settomain" type="Button" parent="Control/Settings"]
margin_top = 276.0
margin_right = 578.0
margin_bottom = 310.0
action_mode = 0
text = "Back to Main Menu"
flat = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Control/Menu/Button2" to="." method="_on_Button2_pressed"]
[connection signal="focus_entered" from="Control/Menu/Button" to="Control/Menu/Button" method="_on_Button_focus_entered"]
[connection signal="mouse_entered" from="Control/Menu/Button" to="Control/Menu/Button" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Control/Menu/Button" to="Control/Menu/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Menu/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Control/Story/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Control/Story/backtomain" to="." method="_on_backtomain_pressed"]
[connection signal="pressed" from="Control/Settings/settomain" to="." method="_on_settomain_pressed"]
